@@ -27,6 +27,7 @@
     <copyright>
       <year>2007</year>
       <year>2008</year>
+      <year>2009</year>
       <holder>Jeff Brown</holder>
     </copyright>
     <legalnotice><para>All Rights Reserved</para></legalnotice>
